Bug 130130 - In Insert menu, multiple hotkey never reaches 3rd item (gen)
Summary: In Insert menu, multiple hotkey never reaches 3rd item (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.1
Keywords:
Depends on:
Blocks: Main-Menu
  Show dependency treegraph
 
Reported: 2020-01-22 17:48 UTC by TorrAB
Modified: 2020-01-29 10:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TorrAB 2020-01-22 17:48:35 UTC
Description:
In any Writer window, ~i opens Insert menu; then, hit p: jump to SpecialChar; hit p again: jump back to PageBreak instead of proceeding to PageNumber
Similar to bug 129967


Steps to Reproduce:
1.In any Writer window, opens Insert menu to PageNumber
2. hit p: jump to SpecialChar
3. hit p again

Actual Results:
2nd hit jumps back to PageBreak instead of proceeding to PageNumber

Expected Results:
jump to 3rd choice, PageNumber


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Dieter 2020-01-22 21:26:25 UTC
I confirm it with

Version: 6.5.0.0.alpha0+ (x64)
Build ID: 350d25da375f221edfa37309324ce3c68cf297ef
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded
Comment 2 Xisco Faulí 2020-01-28 16:11:28 UTC
I can't reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: aef7feb3e695ecf6d411f0777196dcc4281e201a
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2020-01-28 16:14:31 UTC
can reproduce it with gen.

Version: 7.0.0.0.alpha0+
Build ID: aef7feb3e695ecf6d411f0777196dcc4281e201a
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

and

Version: 5.3.0.0.alpha1+
Build ID: 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
CPU Threads: 4; OS Version: Linux 4.19; UI Render: default; VCL: x11; Layout Engine: new; 
Locale: en-US (en_US.UTF-8); Calc: group

Caolán, I thought you might be interested in this issue...
Comment 4 Commit Notification 2020-01-29 08:52:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab20238ad175e027ccfe4532c3899454837253b9

Resolves: tdf#130130 Insert menu, multiple hotkey never reaches 3rd item

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2020-01-29 08:57:50 UTC
fixed in master, backport to 6-4 in gerrit
Comment 6 Commit Notification 2020-01-29 09:44:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/3dea3e9b4a6a658a02c2547dcea15e320e62efaf

Resolves: tdf#130130 Insert menu, multiple hotkey never reaches 3rd item

It will be available in 6.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-01-29 10:32:30 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 16cb51aedf38d2f9e10d4398665417ef922eb9fb
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!