Resolves: tdf#130130 Insert menu, multiple hotkey never reaches 3rd item

Change-Id: Ica70be71094229a12c16eee1d3ff6960b7e06734
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87657
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>